testsuite/good/decorators/test_decorator_polymorphic_1/SubType.flux
type SubType extends SuperType {
   int methodToDecorate();
}
methods {
   int methodToDecorate() {
      return 1;
   }
}