testsuite/bad/test_publisher_subtype/SubType.flux
type SubType extends SuperType publishes String {}